--- a/_config.yml
+++ b/_config.yml
@@ -39,11 +39,5 @@ footer:
       icon: "fa-solid fa-envelope"
       url: "mailto:contact@letpeople.work"
     - label: "Slack"
-      icon: "fab fa-fw fa-slack"
+      icon: "fa-brands fa-slack"
       url: "https://join.slack.com/t/let-people-work/shared_invite/zt-2y0zfim85-qhbgt8N0yw90G1P~JWXvlg"
-    - label: "LinkedIn"
-      icon: "fab fa-fw fa-linkedin"
-      url: "https://www.linkedin.com/company/let-people-work"
-    - label: "GitHub"
-      icon: "fab fa-fw fa-github"
-      url: "https://github.com/letpeoplework"    
