--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,10 +2,10 @@ main:
   - title: "Home"
     url: index.html
   - title: "Training"
-    url: /training/
+    url: index.html#trainings
   - title: "Tools"
-    url: /tools/
-  - title: "Services"
-    url: /services/
+    url: index.html#tools
+  - title: "About Us"
+    url: index.html#about
   - title: "Blog"
     url: https://blog.letpeople.work/
