Make header and footer sticky

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,6 +6,6 @@ main:
   - title: "Tools"
     url: index.html#tools
   - title: "About Us"
-    url: index.html#about
+    url: index.html#about-us
   - title: "Blog"
     url: https://blog.letpeople.work/
