--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,11 +1,12 @@
 main:
-  - title: "Home"
-    url: index.html
   - title: "Training"
     url: index.html#trainings
   - title: "Tools"
     url: index.html#tools
   - title: "About Us"
     url: index.html#about-us
+  - title: "Contact"
+    url: index.html#contact
   - title: "Blog"
     url: https://blog.letpeople.work/
+    target: _blank
