Add link to Obeya in Header

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,6 +7,9 @@ main:
     url: "#about-us"
   - title: "Contact"
     url: "#contact"
+  - title: "Our Obeya"
+    url: https://miro.com/app/board/uXjVItmYi5c=/?share_link_id=874060812346
+    target: _blank
   - title: "Event Tickets"
     url: https://www.tickettailor.com/events/letpeoplework?
     target: _blank
